generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "linux-musl-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  ADMIN
  TRADER
}

enum SubscriptionTier {
  FREE
  PRO
}

model User {
  id               String           @id @default(cuid())
  email            String?          @unique
  telegramId       String?          @unique
  role             UserRole         @default(TRADER)
  passwordHash     String?
  referralCode     String?          @unique
  referredByCode   String?
  subscriptionTier SubscriptionTier @default(FREE)
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt

  // Snapshot of what the user actually agreed to (see fee.ts's consent-gate
  // check in the Telegram bot) — if an admin later changes the fee %, this
  // snapshot no longer matches BusinessSettings.performanceFeeBps and the
  // user is prompted to re-accept before auto-trading is re-enabled, without
  // needing a separate policy-version-history table.
  feePolicyAcceptedAt     DateTime?
  feePolicyAcceptedFeeBps Int?

  wallets       Wallet[]
  watchlists    WatchlistItem[]
  snipeConfigs  SnipeConfig[]
  copyConfigs   CopyTradeConfig[]
  auditLogs     AuditLog[]
  ledgerEntries LedgerEntry[]
  performanceFees        PerformanceFeeLedger[]
  referralRewardsEarned  ReferralReward[]        @relation("ReferralRewardReferrer")
  referralRewardsCaused  ReferralReward[]        @relation("ReferralRewardReferredUser")

  @@map("users")
}

/// Wallet private keys are stored encrypted (AES-256-GCM) via the security layer,
/// never in plaintext. `encryptedSecret` holds ciphertext + iv + authTag, base64-joined.
model Wallet {
  id              String   @id @default(cuid())
  userId          String
  user            User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  label           String
  publicKey       String   @unique
  encryptedSecret String
  isActive        Boolean  @default(true)
  createdAt       DateTime @default(now())

  // Cache backing "Current Balance"/"Last Updated" in the wallet UX (Telegram
  // + Dashboard) — written by depositMonitor.ts's poll loop and by the
  // on-demand /wallets/:id/refresh-balance route, read instead of a live RPC
  // call on every list render. Both null until the first successful balance
  // read for this wallet.
  lastKnownBalanceLamports BigInt?
  balanceUpdatedAt         DateTime?

  trades        Trade[]
  positions     Position[]
  auditLogs     AuditLog[]
  ledgerEntries LedgerEntry[]

  @@index([userId])
  @@map("wallets")
}

enum Dex {
  PUMPFUN
  RAYDIUM
  ORCA
  JUPITER
  PUMPSWAP
  METEORA
}

enum DiscoverySource {
  ON_CHAIN
  TELEGRAM
}

model Token {
  id              String   @id @default(cuid())
  mint            String   @unique
  symbol          String?
  name            String?
  decimals        Int      @default(9)
  dex             Dex
  poolAddress     String?
  createdAt       DateTime @default(now())
  firstSeenAt     DateTime @default(now())

  // How this token was first discovered — ON_CHAIN (pump.fun log / DEX pool-creation
  // scanner) is the default and covers every token created before this field existed.
  // TELEGRAM means a signal source (see apps/api/src/social/telegramTrend.ts) surfaced
  // the mint first; the token still went through the exact same risk/AI/buy pipeline
  // as any ON_CHAIN detection — this field is provenance only, never a gate.
  discoverySource     DiscoverySource @default(ON_CHAIN)
  telegramChannel     String?
  telegramMessageUrl  String?

  liquidityUsd        Float?
  marketCapUsd         Float?
  mintAuthorityRevoked Boolean?
  freezeAuthorityRevoked Boolean?
  lpBurnedOrLocked     Boolean?
  top10HolderPercent   Float?
  // Count of non-zero accounts among Solana's top-20-largest-accounts read (see
  // getHolderConcentration) — a real signal, but not a true total holder count;
  // trade cards label it "Top Holders" accordingly, not "Total Holders".
  holderCount          Int?
  isHoneypotSuspected  Boolean?
  aiScore              Float?
  aiSummary            String?
  // DexScreener's own pair.info.imageUrl — used for the trade card's token logo.
  imageUrl             String?

  trades    Trade[]
  positions Position[]
  snipes    SnipeConfig[]

  @@index([dex])
  @@index([createdAt])
  @@map("tokens")
}

enum OrderSide {
  BUY
  SELL
}

enum TradeStatus {
  PENDING
  CONFIRMED
  FAILED
}

model Trade {
  id          String      @id @default(cuid())
  walletId    String
  wallet      Wallet      @relation(fields: [walletId], references: [id])
  tokenId     String
  token       Token       @relation(fields: [tokenId], references: [id])
  side        OrderSide
  status      TradeStatus @default(PENDING)
  amountSol   Float
  amountToken Float?
  priceUsd    Float?
  txSignature String?     @unique
  slippageBps Int         @default(100)
  jitoTip     Float?
  isPaperTrade Boolean    @default(false)
  createdAt   DateTime    @default(now())
  confirmedAt DateTime?

  @@index([walletId])
  @@index([tokenId])
  @@map("trades")
}

enum PositionStatus {
  OPEN
  CLOSED
}

model Position {
  id                   String         @id @default(cuid())
  walletId             String
  wallet               Wallet         @relation(fields: [walletId], references: [id])
  tokenId              String
  token                Token          @relation(fields: [tokenId], references: [id])
  status               PositionStatus @default(OPEN)
  entryPriceUsd        Float
  amountToken           Float
  amountSolInvested     Float
  takeProfitPercent    Float?
  stopLossPercent      Float?
  trailingStopPercent  Float?
  // Frozen at open time, same convention as the three fields above — a position's
  // exit strategy doesn't retroactively change if the user edits their SnipeConfig
  // later. Null means "not using a preset" (today's default behavior, unchanged).
  trailingStopPreset   String?
  highWaterMarkUsd     Float?
  realizedPnlUsd       Float?
  // The exact ready-to-share caption generated for the SELL trade card at close
  // time — persisted so the 🔗 Share button can resend the identical text anytime
  // afterward without needing to reconstruct it (and without a Trade->Position
  // link, which doesn't exist). Null for OPEN positions and any closed before this.
  shareCaption         String?
  isPaperTrade         Boolean        @default(false)
  closedAt             DateTime?
  createdAt            DateTime       @default(now())
  updatedAt            DateTime       @updatedAt

  @@index([walletId, status])
  // Also DB-enforced: at most one OPEN position per (walletId, tokenId) via a
  // partial unique index (migration 20260711033928_position_one_open_per_token)
  // — not expressible here since Prisma's schema DSL has no WHERE-clause index
  // support, so it won't show up as a diff/drift warning by design.
  @@map("positions")
}

model SnipeConfig {
  id                  String   @id @default(cuid())
  userId              String
  user                User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  tokenId             String?
  token               Token?   @relation(fields: [tokenId], references: [id])
  isActive            Boolean  @default(true)
  buyAmountSol        Float
  maxSlippageBps      Int      @default(300)
  minLiquidityUsd     Float    @default(1000)
  minAiScore          Float    @default(60)
  takeProfitPercent   Float?
  stopLossPercent     Float?
  trailingStopPercent Float?
  // See Position.trailingStopPreset — the template default copied onto each new
  // position at open time. Null (the default) is fully backward compatible: no
  // behavior changes unless a user explicitly picks a preset in Settings.
  trailingStopPreset  String?
  autoBuyOnLaunch     Boolean  @default(false)
  createdAt           DateTime @default(now())

  // Smart Entry Filter (apps/api/src/trading/entryFilter.ts) — opt-in, per
  // config. Defaults reproduce today's behavior exactly (disabled, and every
  // threshold at a value that would never add an extra rejection if somehow
  // evaluated anyway) — enabling this is a deliberate per-user choice, not a
  // silent global behavior change on deploy. Also gated by the global
  // ENTRY_FILTER_ENABLED env flag (see config/env.ts).
  entryFilterEnabled     Boolean @default(false)
  minBuySellRatio        Float   @default(0)
  minHolderCount         Int     @default(0)
  minRecentVolumeUsd     Float   @default(0)
  maxTop10HolderPercent  Float   @default(100)

  @@index([userId])
  @@map("snipe_configs")
}

model SmartWallet {
  id          String   @id @default(cuid())
  address     String   @unique
  label       String?
  winRate     Float?
  totalPnlUsd Float?
  isTracked   Boolean  @default(true)
  createdAt   DateTime @default(now())

  @@map("smart_wallets")
}

model CopyTradeConfig {
  id              String   @id @default(cuid())
  userId          String
  user            User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  targetAddress   String
  isActive        Boolean  @default(true)
  copyPercentSize Float    @default(100)
  maxAmountSol    Float?
  createdAt       DateTime @default(now())

  @@index([userId])
  @@map("copy_trade_configs")
}

model WatchlistItem {
  id        String   @id @default(cuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  mint      String
  note      String?
  createdAt DateTime @default(now())

  @@unique([userId, mint])
  @@map("watchlist_items")
}

enum MarketingCategory {
  NEWS
  TRADING_TIPS
  MARKET_UPDATES
  TRENDING_TOKENS
  REFERRAL
  ANNOUNCEMENTS
}

model MarketingPost {
  id           String            @id @default(cuid())
  category     MarketingCategory
  contentHash  String            @unique
  title        String
  body         String
  imageUrl     String?
  buttons      Json?
  publishedAt  DateTime?
  scheduledFor DateTime?
  createdAt    DateTime          @default(now())

  @@index([category])
  @@map("marketing_posts")
}

enum AuditStatus {
  SUCCESS
  FAILED
  PENDING
}

/// Append-only: a DB-level BEFORE UPDATE/DELETE trigger (see migration
/// 20260713150000_add_wallet_audit_immutability) rejects any write to an
/// existing row, regardless of which role issues it — table-owner GRANTs
/// don't stop a superuser or the owner itself from UPDATE/DELETE, so a plain
/// REVOKE wouldn't actually enforce "immutable" here (the app's own DB role
/// owns this table). Every existing call site only ever calls .create() —
/// verified against the whole codebase before this change — so this is
/// purely additive and cannot break anything that already works.
model AuditLog {
  id     String  @id @default(cuid())
  userId String?
  user   User?   @relation(fields: [userId], references: [id])
  // Nullable — most existing events (auth.login, etc.) aren't wallet-scoped.
  // SetNull (not Cascade) on wallet deletion so the audit trail survives even
  // if the wallet row it references is ever hard-deleted.
  walletId String?
  wallet   Wallet? @relation(fields: [walletId], references: [id], onDelete: SetNull)
  action   String
  // Defaults to SUCCESS so every pre-existing call site (which never set this)
  // reads as a successful event, matching what actually happened in each case.
  status      AuditStatus @default(SUCCESS)
  txSignature String?
  metadata    Json?
  ip          String?
  createdAt   DateTime    @default(now())

  @@index([userId])
  @@index([action])
  @@index([walletId])
  @@map("audit_logs")
}

enum LedgerEntryType {
  DEPOSIT
  WITHDRAWAL
  REFERRAL_CREDIT
  PROFIT_CREDIT
  OWNER_FEE
  LEDGER_ADJUSTMENT
}

enum LedgerAsset {
  SOL
  USD
}

enum LedgerDirection {
  CREDIT
  DEBIT
}

/// Immutable financial ledger — separate from AuditLog (compliance/security
/// trail) by design: this is the balance-affecting event history (deposits,
/// admin-recorded withdrawals, profit/referral/owner-fee bookkeeping), always
/// written alongside an AuditLog row from the same call site (see
/// packages/shared/src/wallet/ledgerWrite.ts's writeLedgerAndAudit). Same
/// BEFORE UPDATE/DELETE trigger immutability pattern as audit_logs (see
/// migration 20260713150000_add_wallet_audit_immutability).
model LedgerEntry {
  id        String          @id @default(cuid())
  userId    String
  user      User            @relation(fields: [userId], references: [id])
  // Nullable — USD bookkeeping entries derived from a closed position
  // (PROFIT_CREDIT/OWNER_FEE/REFERRAL_CREDIT) aren't tied to one specific
  // wallet at the ledger level, only to the user. SetNull (not Cascade) so a
  // hard-deleted wallet never takes its own ledger history down with it.
  walletId  String?
  wallet    Wallet?         @relation(fields: [walletId], references: [id], onDelete: SetNull)
  type      LedgerEntryType
  asset     LedgerAsset
  direction LedgerDirection

  // Exactly one of these two is populated, matching `asset`: SOL-denominated
  // events (DEPOSIT/WITHDRAWAL) use amountLamports; USD-denominated
  // bookkeeping events (PROFIT_CREDIT/OWNER_FEE/REFERRAL_CREDIT — no on-chain
  // transfer exists for these today, see registerFeeSystem.ts) use amountUsd.
  amountLamports       BigInt?
  amountUsd            Float?
  // Only meaningful for SOL wallet-affecting entries (DEPOSIT/WITHDRAWAL) —
  // the wallet's cached balance immediately after this entry was recorded.
  balanceAfterLamports BigInt?

  txSignature String?
  // Reused from AuditLog's own enum rather than duplicated.
  status      AuditStatus @default(SUCCESS)
  // Links back to PerformanceFeeLedger.id / ReferralReward.id / a manual
  // withdrawal record — never a hard FK (different target tables per type),
  // same convention as Position.exitReason being a plain string.
  referenceType String?
  referenceId   String?
  metadata      Json?
  createdAt     DateTime @default(now())

  @@index([userId])
  @@index([walletId])
  @@index([type])
  @@index([createdAt])
  @@map("ledger_entries")
}

enum BlacklistType {
  MINT
  DEPLOYER
}

/// Cheap, RPC-free deny-list checked before any expensive risk/AI work runs —
/// currently only MINT entries are looked up (see worker.ts's handleTelegramSignal);
/// DEPLOYER exists for future use once a cheap way to resolve a deployer address
/// from a bare mint exists, but is not populated or checked yet.
model BlacklistEntry {
  id        String        @id @default(cuid())
  type      BlacklistType
  value     String
  reason    String?
  createdAt DateTime      @default(now())

  @@unique([type, value])
  @@map("blacklist_entries")
}

/// Singleton row (lazily created on first access — see packages/shared/src/fee.ts's
/// getOrCreateBusinessSettings) holding the platform's admin-configurable
/// performance-fee and referral-program parameters. Ledger/bookkeeping only —
/// no on-chain fee collection or referral payout happens automatically.
model BusinessSettings {
  id                     String   @id @default(cuid())
  performanceFeeBps      Int      @default(2000)
  referralProgramEnabled Boolean  @default(true)
  maxReferralDepth       Int      @default(2)
  updatedAt              DateTime @updatedAt

  // The hard, auditable cutover boundary for fee processing — a position whose
  // closedAt predates this is never charged, no matter how it might somehow
  // trigger the subscriber (a future backfill script, a replayed event, manual
  // testing, etc.). DEFAULT NOW() means: for a brand-new row, "now" is
  // creation time; for this column being added to the EXISTING singleton row
  // via migration, "now" is the moment that migration is applied — i.e.
  // exactly "the moment this version is deployed," with no manual backfill
  // step required. Existing users are never excluded by this — the check is
  // purely on when the TRADE closed, never on the user's own createdAt.
  feeSystemActivatedAt DateTime @default(now())

  referralLevels ReferralLevelConfig[]

  @@map("business_settings")
}

/// One row per referral level (1 = direct referrer, 2 = their referrer, ...).
/// percentBps is a share of the PLATFORM's performance fee, not of the
/// trader's profit directly — see fee.ts's calculateReferralRewards.
model ReferralLevelConfig {
  id                 String           @id @default(cuid())
  businessSettingsId String
  businessSettings   BusinessSettings @relation(fields: [businessSettingsId], references: [id], onDelete: Cascade)
  level              Int
  percentBps         Int
  enabled            Boolean          @default(true)

  @@unique([businessSettingsId, level])
  @@map("referral_level_configs")
}

/// One row per closed, profitable position — written once by the event-bus
/// subscriber in apps/api/src/business/registerFeeSystem.ts, never by the
/// trading/execution code itself. The unique constraint on positionId is the
/// idempotency guard (never double-charge the same close). `id` doubles as
/// the human-shareable "Transaction Reference" in trade-report displays.
model PerformanceFeeLedger {
  id              String   @id @default(cuid())
  positionId      String   @unique
  sellTradeId     String?
  userId          String
  user            User     @relation(fields: [userId], references: [id])
  walletId        String
  tokenId         String
  grossProfitUsd  Float
  tradingCostsUsd Float
  netProfitUsd    Float
  feeBps          Int
  feeUsd          Float
  userShareUsd    Float
  createdAt       DateTime @default(now())

  referralRewards ReferralReward[]

  @@index([userId])
  @@index([createdAt])
  @@map("performance_fee_ledger")
}

/// One row per referrer per level who earns a share of a single
/// PerformanceFeeLedger row's fee. percentBps/rewardUsd are snapshotted at
/// creation time so a later admin change to ReferralLevelConfig never
/// rewrites history.
model ReferralReward {
  id                     String               @id @default(cuid())
  performanceFeeLedgerId String
  performanceFeeLedger   PerformanceFeeLedger @relation(fields: [performanceFeeLedgerId], references: [id], onDelete: Cascade)
  referrerUserId         String
  referrer               User                 @relation("ReferralRewardReferrer", fields: [referrerUserId], references: [id])
  referredUserId         String
  referredUser           User                 @relation("ReferralRewardReferredUser", fields: [referredUserId], references: [id])
  level                  Int
  percentBps             Int
  rewardUsd              Float
  createdAt              DateTime             @default(now())

  @@index([referrerUserId])
  @@index([performanceFeeLedgerId])
  @@map("referral_rewards")
}
